# RedSimulator

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
.github/workflows/: battle.yml  ci.yml
data/: payload_stats.json  scan_history.json
data/config/: common_paths.json
data/dashboard/: history.db
data/fixtures/: attack_plan.json  attack_result.json  payload_result.json  scan_result.json
data/payloads/: sqli_payloads.txt
data/proxy/: flows.db
data/wordlists/: backup.txt  common.txt  nodejs.txt  sensitive.txt
docker/: nmap.Dockerfile  nmap_service.py  recon-tools.Dockerfile  recon_service.py
docker/targets/: docker-compose.targets.yml
docs/: blog.md
frontend/: index.html
frontend/src/: App.jsx
rules/: owasp_rules.json
scripts/: import_seclists.py  run_battle_tests.sh  setup_wordlists.sh
src/: __init__.py  api.py  dashboard.py  orchestrator.py
src/auth/: __init__.py  manager.py  models.py
src/campaign/: __init__.py  __main__.py  manager.py  models.py
src/dashboard/: __init__.py  models.py  store.py
src/executor/: __init__.py  __main__.py  base.py  rate_limiter.py  runner.py  session.py
src/expert/: __init__.py  __main__.py  custom_rules.py  engine.py  facts.py  llm_analyst.py  rules.py  rules_chaining.py  rules_header.py
src/generator/: __init__.py  __main__.py  feedback.py  generate.py  llm_mutator.py  offline_mutator.py  payload_db.py  payload_models.py  train.py  vae_model.py
src/infra/: __init__.py  config.py  decorators.py  exceptions.py  llm.py  llm_config.py  logging.py  secure.py
src/models/: __init__.py  attack_plan.py  attack_result.py  payload_result.py  scan_result.py
src/passive/: __init__.py  analyzer.py  models.py
src/pentester/: __init__.py  __main__.py  agent.py  tools.py
src/proxy/: __init__.py  certificate.py  feed.py  interceptor.py  models.py  replayer.py  server.py  store.py
src/reporter/: __init__.py  __main__.py  pdf_export.py  rag_chatbot.py  report_generator.py
src/scanner/: __init__.py  __main__.py  agent.py  browser.py  crawlers.py  form_parsing.py  http_utils.py  memory.py  tech_detector.py  tools.py
src/scoring/: __init__.py  cvss.py
tests/: test_auth.py  test_e2e.py  test_executor.py  test_expert.py  test_generator.py  test_infra.py  test_models.py  test_passive.py  test_proxy.py  test_validator.py
(+110 files in other folders)
