[project]
name = "redsimulator"
version = "0.1.0"
description = "AI-powered automated security testing pipeline"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "langchain>=0.2",
    "langchain-anthropic>=0.1",
    "langgraph>=0.2",
    "python-nmap>=0.7",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "playwright>=1.40",
    "torch>=2.0",
    "numpy>=1.24",
    "chromadb>=0.4",
    "streamlit>=1.30",
    "plotly>=5.0",
    "python-dotenv>=1.0",
    "fastapi>=0.100",
    "uvicorn>=0.24",
    "sse-starlette>=1.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "strict"

[tool.setuptools.packages.find]
include = ["src*"]
