[project]
name = "redsimulator"
version = "0.1.0"
description = "AI-powered automated security testing pipeline"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "langchain>=0.2",
    "langchain-anthropic>=0.1",
    "langgraph>=0.2",
    "python-nmap>=0.7",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "playwright>=1.40",
    "faiss-cpu>=1.7",
    "fastembed>=0.3",
    "networkx>=3.0",
    "python-dotenv>=1.0",
    "fastapi>=0.100",
    "uvicorn>=0.24",
    "sse-starlette>=1.6",
    "markdown>=3.5",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.8"]
pdf = ["weasyprint>=60.0"]
proxy = ["mitmproxy>=10.0"]
ollama = ["langchain-ollama>=0.2"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "strict"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.setuptools.packages.find]
include = ["src*"]
